force-app/main/default/objects/SurveyInvitation/fields/Created_Date_Custom__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_Custom__c</fullName>
    <description>This is use for TESTING only</description>
    <label>Created Date Custom</label>
    <type>DateTime</type>
</CustomField>