force-app/main/default/objects/SurveyInvitation/fields/X2nd_Survey_Invitation__c.field-meta.xml
<CustomField>
    <fullName>X2nd_Survey_Invitation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2nd Survey Invitation</label>
    <type>Checkbox</type>
</CustomField>