force-app/main/default/objects/SurveyInvitation/fields/X3rd_Survey_Invitation__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Survey_Invitation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3rd Survey Invitation</label>
    <type>Checkbox</type>
</CustomField>